@@ -285,11 +285,6 @@ getOption(x, default = NULL)
       printed as they occur.  If \code{warn} is two or larger all
       warnings are turned into errors.}
 
-    \item{\code{warnEscapes}:}{logical.  If true (the default) the parser
-      warns on unrecognized (backslash) escape sequences and there is a
-      truncation warning on any attempt to create a character string
-      containing an embedded nul.}
-
     \item{\code{warnPartialMatchArgs}:}{logical.  If true, warns if
       partial matching is used in argument matching.}
 
